# ChangeLog for app-admin/useflags
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*useflags-2.9 (11 Nov 2012)

  01 Dev 2012; Martin Väth <martin@mvath.de>
  Remove USE=eix; only log recommendation if appropriate

  11 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*useflags-2.7 (15 Oct 2012)

  15 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*useflags-2.6 (08 Jan 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  09 Jan 2012; Martin Väth <martin@mvath.de>
  Depend of virtual/perl-Getopt-Long

  08 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump: Make help handling more consistent.

*useflags-2.5 (21 Dec 2011)

  07 Jan 2012; Martin Väth <martin@mvath.de>
  Fix dependencies

  21 Nov 2011; Martin Väth <martin@mvath.de>
  Suppose IUSE=eix

  21 Nov 2011; Martin Väth <martin@mvath.de>
  New ebuild from scratch.