@@ -1,1 +1,1 @@
-DIST useflags-2.8.tar.gz 4924 SHA256 2927abd1fca324903a4d9e3dbb8fdbefdfb9cb51d99186ffd0d73eef9d6549c7 SHA512 ebd214f6d261b9b73fd9dd1f94ca073b2725baf50e2597078c3702f58f3581b907d2e01641846a7292d7028b6d295823064725ae6847363048e16faa78873ec3 WHIRLPOOL 43fac92386de9a2b6006aed9e36f05455eed4d5b8b59e42acc3bbd95ee255b01936265fce90f806d124d70c3e59a66c0e40bf66b3bd15422229c5d78822f7694
+DIST useflags-3.0.tar.gz 5259 SHA256 0c0e1440a61db55bc02d9a96a6d821313ae74aaff46b5b018f7177f30bf06591 SHA512 34a8ce0c5eaeab33518f9f656bad488856a90e60d9de90f10bc35c6fe2c1ca7308e717e72eb9ef75d6381ce73a639f324eefc898af807f043b2c9d75e2eee83a WHIRLPOOL 1fc916838ea69ae2efb4feef16754887f1e9d45a713223a181e7f7978fa11715a1011a13b21fea3399ae689f7f610b7452cfa6bc6d63baaa82f06040f2af0729
